--- a/analyse.Rmd
+++ b/analyse.Rmd
@@ -42,7 +42,41 @@ lienTruc <- function(DTLoc,titre="title"){
 
 
 #on recup les données
-csv.data <- read.csv(file,header=TRUE,sep=";")
+dirs <- list.dirs(path = ".", full.names = TRUE, recursive = FALSE)
+player_id <- 0
+player_mod <- "modunknown"
+
+DTActor <- data.table();
+
+#On parse tous les dirs a la racine
+for(d in dirs){
+  #si on est sur un rep de datas, c'est un nouveau joueur
+  if(grep("data",d) > 0){
+    p <- player_id + 1;
+    dirsPlayer <- list.dirs(path = d, full.names = TRUE, recursive = FALSE)
+    #dans ce rep, on a des sous rep vanilla et mod avec les datas
+    for(dp in dirsPlayer){
+      is_result = FALSE;
+      if(grep("vanilla",dp > 0)){
+        player_mod = "vanilla"
+        is_result = TRUE;
+      }
+      if(grep("mod",dp) > 0){
+        player_mod = "mod"
+        is_result = TRUE;
+      }
+      
+      #si c'est un rep de data mod ou vanilla, on a les bonnes vars, on load
+      if(is_result){
+        DTActorLoc <- as.data.table(read.csv("actor.del",header=FALSE,sep=";"))
+        DTActorLoc$MyPlayerId <- player_id
+        DTActor
+      }
+    }
+  }
+    
+}
+csv.data 
 
 #difficulte logique
 DTL <- csv.data[which(csv.data$nom_du_jeu=="Logique2"),]
