--- a/analyse2/analyse.Rmd
+++ b/analyse2/analyse.Rmd
@@ -28,15 +28,13 @@ require(data.table)
 
 ```{r echo=FALSE}
 #------------------- configuration
-logDataLoad = FALSE
+logDataLoad = TRUE
 
 #------------------- chargement des fichiers a partir du repertoire courant
 # il faut des repertoirs dataxxxxx a la racine
-# qui contiennent un rep vanillaxxx et un rep modxxxx pour les deux conditions
 
 dirs <- list.dirs(path = ".", full.names = TRUE, recursive = FALSE)
 player_id <- 0
-player_mod <- "modunknown"
 
 DTA <- data.table();
 DTAAInt <- data.table();
@@ -44,6 +42,9 @@ DTAInt <- data.table();
 DTAItemInt <- data.table();
 DTAPos <- data.table();
 DTPlaces <- data.table();
+
+if(logDataLoad)
+    print("Chargement des donnees: ");
 
 #On parse tous les dirs a la racine
 for(d in dirs){
@@ -60,44 +61,81 @@ for(d in dirs){
     if(is_result){
       if(logDataLoad)
         print("Grabbing files...");
+      
+      #on recup le game mode
+      DTModeLoc <- as.data.table(read.csv(paste(d,"/game_type.del",sep="" ),header=FALSE,sep=";"))
+      setnames(DTModeLoc, old=c("V1","V2"), new=c("mode", "time"));
+      DTModeLoc[, modeName:="vanilla"][mode==0, modeName:="mod"];
+      
+      DTAIntKindLoc <- as.data.table(read.csv(paste(d,"/actor_interaction_kind.del",sep="" ),header=FALSE,sep=";"))
+      setnames(DTAIntKindLoc, old=c("V1","V2"), new=c("action", "actionName"));
+      
+      DTItemIntKindLoc <- as.data.table(read.csv(paste(d,"/item_interaction_kind.del",sep="" ),header=FALSE,sep=";"))
+      setnames(DTItemIntKindLoc, old=c("V1","V2"), new=c("action", "actionName"));
+      
+      
       DTALoc <- as.data.table(read.csv(paste(d,"/actor.del",sep="" ),header=FALSE,sep=";"))
       DTALoc$MyPlayerId <- player_id
-      DTALoc$MyMod <- player_mod
       DTA <- rbind(DTA,DTALoc);
       remove(DTALoc);
       
       DTAAIntLoc <- as.data.table(read.csv(paste(d,"/actor_actor_interaction.del",sep="" ),header=FALSE,sep=";"))
+      setnames(DTAAIntLoc, old=c("V1","V2","V3","V4","V5","V6","V7","V8"), new=c("actor1", "actor2","V3","X","Y","Z","time","action"))
       DTAAIntLoc$MyPlayerId <- player_id
-      DTAAIntLoc$MyMod <- player_mod
+      DTAAIntLoc[, MyMod:=DTModeLoc[1]$modeName][time>DTModeLoc[2]$time, MyMod:=DTModeLoc[2]$modeName]
+      
+      #join sur les actions, pour avoir les bon noms d'action
+      setkey(DTAIntKindLoc,action)
+      setkey(DTAAIntLoc,action)
+      DTAAIntLoc <- DTAAIntLoc[DTAIntKindLoc, nomatch=0]
+      
       DTAAInt <- rbind(DTAAInt,DTAAIntLoc);
       remove(DTAAIntLoc);
       
       DTAIntLoc <- as.data.table(read.csv(paste(d,"/actor_interaction.del",sep="" ),header=FALSE,sep=";"))
+      setnames(DTAIntLoc, old=c("V1","V2","V3","V4","V5","V6","V7"), new=c("actor","X","Y","Z","time","action","V7"))
       DTAIntLoc$MyPlayerId <- player_id
-      DTAIntLoc$MyMod <- player_mod
+      DTAIntLoc[, MyMod:=DTModeLoc[1]$modeName][time>=DTModeLoc[2]$time, MyMod:=DTModeLoc[2]$modeName]
+      
+      #join sur les actions, pour avoir les bon noms d'action
+      setkey(DTAIntKindLoc,action)
+      setkey(DTAIntLoc,action)
+      DTAIntLoc <- DTAIntLoc[DTAIntKindLoc, nomatch=0]
+      
       DTAInt <- rbind(DTAInt,DTAIntLoc);
       remove(DTAIntLoc);
       
       DTAItemIntLoc <- as.data.table(read.csv(paste(d,"/actor_item_interaction.del",sep="" ),header=FALSE,sep=";"))
+      setnames(DTAItemIntLoc, old=c("V1","V2","V3","V4","V5","V6","V7"), new=c("actor","item","X","Y","Z","time","action"))
       DTAItemIntLoc$MyPlayerId <- player_id
-      DTAItemIntLoc$MyMod <- player_mod
+      DTAItemIntLoc[, MyMod:=DTModeLoc[1]$modeName][time>=DTModeLoc[2]$time, MyMod:=DTModeLoc[2]$modeName]
+      
+      #join sur les actions, pour avoir les bon noms d'action
+      setkey(DTItemIntKindLoc,action)
+      setkey(DTAItemIntLoc,action)
+      DTAItemIntLoc <- DTAItemIntLoc[DTItemIntKindLoc, nomatch=0]
+      
       DTAItemInt <- rbind(DTAItemInt,DTAItemIntLoc);
       remove(DTAItemIntLoc);
       
       DTAPosLoc <- as.data.table(read.csv(paste(d,"/actor_position.del",sep="" ),header=FALSE,sep=";"))
+      setnames(DTAPosLoc, old=c("V1","V2","V3","V4","V5"), new=c("actor","time","X","Y","Z"))
       DTAPosLoc$MyPlayerId <- player_id
-      DTAPosLoc$MyMod <- player_mod
+      DTAPosLoc[, MyMod:=DTModeLoc[1]$modeName][time>=DTModeLoc[2]$time, MyMod:=DTModeLoc[2]$modeName]
       DTAPos <- rbind(DTAPos,DTAPosLoc);
       remove(DTAPosLoc);
       
       DTPlacesLoc <- as.data.table(read.csv(paste(d,"/place.del",sep="" ),header=FALSE,sep=";"))
+      setnames(DTPlacesLoc, old=c("V1","V2","V3","V4"), new=c("id","X","Y","Z"))
       DTPlacesLoc$MyPlayerId <- player_id
-      DTPlacesLoc$MyMod <- player_mod
       DTPlaces <- rbind(DTPlaces,DTPlacesLoc);
+      if(logDataLoad)
+        print(paste("add ",nrow(DTPlacesLoc)," places"));
       remove(DTPlacesLoc);
       
       if(logDataLoad)
         print("... done");
+      
     }
   }
 }
@@ -112,22 +150,28 @@ DTAPos <- as.data.table(DTAPos)
 ###Description générale
 ```{r echo=FALSE}
 nbPlayers <- nrow(DTAPos[,MyPlayerId,by=MyPlayerId])
-playtime <- DTAPos[,list(playTime=(max(V2)-min(V2))/3600),by=.(MyMod,MyPlayerId)]
+playtime <- DTAPos[,list(playTime=floor((max(time)-min(time))/60)),by=.(MyMod,MyPlayerId)]
 ```
-Expérience réalisée sur **`r nbPlayers`** joueurs, pour un playtime moyen de **`r round(mean(playtime$playTime),1)`** minutes ($\sigma$=`r round(sd(playtime$playTime),1)`). 
+Expérience réalisée sur **`r nbPlayers`** joueurs, pour un playtime moyen de **`r round(mean(playtime$playTime),1)`** minutes ($\sigma$=`r round(sd(playtime$playTime),1)`) dans chaque mode de jeu. 
 
 ```{r echo=FALSE}
 hist(playtime$playTime, xlab="Playtime (mins)", ylab="nombre de parties", main="Playtime")
 ```
 
 ```{r echo=FALSE}
-barplot(table(DTAInt$V6), xlab="Actions", ylab="frequence", main="Actor interaction")
-barplot(table(DTAAInt$V8), xlab="Actions", ylab="frequence", main="Actor Actor interaction")
+barplot(table(DTAInt$actionName), xlab="Actions", ylab="frequence", main="Actor interaction",las=2)
+barplot(table(DTAAInt$actionName), xlab="Actions", ylab="frequence", main="Actor Actor interaction",las=2)
+DTPlacesNbPlaces <- DTPlaces[,.(nbPlaces=nrow(.SD)),by=.(MyPlayerId)]
+barplot(table(DTPlacesNbPlaces$nbPlaces), xlab="Nb places", ylab="frequence", main="Number of places")
 ```
 
 ###Cartes
 ```{r fig.width=4, fig.height=4,echo=FALSE,out.extra=' style="float:left"'}
 #trace les cartes
+
+#on prend les positions min et max sans tenir compte du mod, pour avoir les memes echelles sur les plots
+DTAPosMinMax <- DTAPos[,.(minX=min(X),maxX=max(X),minZ=min(Z),maxZ=max(Z)),by=.(MyPlayerId)]
+
 plotMap <- function (xs,ys,mod,player){
   df <- data.frame(x=xs,y=ys)
   pl <- ggplot(df,aes(x=xs,y=ys))
@@ -135,25 +179,36 @@ plotMap <- function (xs,ys,mod,player){
   pl <- pl + ggtitle(paste(player,mod))
   df <- data.frame(x=mean(xs),y=mean(ys))
   pl <- pl + geom_point(data = df, aes(x=mean(xs),y=mean(ys)), colour = "red")
+  
+  DTPlaceNow <- DTPlaces[MyPlayerId==player];
+  df <- data.frame(x=DTPlaceNow$X,y=DTPlaceNow$Z)
+  pl <- pl + geom_point(data = df, aes(x=df$x,y=df$y), colour = "green")
+  
+  DTMinMaxNow <- DTAPosMinMax[MyPlayerId==player];
+  pl <- pl + xlim(DTMinMaxNow$minX,DTMinMaxNow$maxX)
+  pl <- pl + ylim(DTMinMaxNow$minZ,DTMinMaxNow$maxZ)
+  
   print(pl)  
 }
-void <- DTAPos[,{plotMap(V3,V5,MyMod,MyPlayerId);NULL},by=.(MyMod,MyPlayerId)]
+setkey(DTAPos,MyPlayerId,time)
+void <- DTAPos[,{plotMap(X,Z,MyMod,MyPlayerId);NULL},by=.(MyMod,MyPlayerId)]
 ```
 <div style="clear:both">&nbsp;</div>
 
 ###Lien entre mode de jeu et nombre de lieux
+###ERROR : on ne stoque pas le temps de lieux, donc impossible de comparer le nombre de lieux entre chaque mod
 ```{r echo=FALSE}
 #ajout des variables
-DTPlacesNbPlaces <- DTPlaces[,.(nbPlaces=nrow(.SD)),by=.(MyMod,MyPlayerId)]
+#DTPlacesNbPlaces <- DTPlaces[,.(nbPlaces=nrow(.SD)),by=.(MyMod,MyPlayerId)]
 #barplot(table(DTPlacesNbPlaces$nbPlaces), xlab="Nb places", ylab="frequence", main="Number of places")
-print(DTPlacesNbPlaces)
+#print(DTPlacesNbPlaces)
 
-data <- DTPlacesNbPlaces[MyMod=="vanilla",nbPlaces] - DTPlacesNbPlaces[MyMod=="mod",nbPlaces];
-hist(data,xlab="diff nbLieux  (vanilla - mod)", main="Delta nombre de lieux vanilla/mod")
+#data <- DTPlacesNbPlaces[MyMod=="vanilla",nbPlaces] - DTPlacesNbPlaces[MyMod=="mod",nbPlaces];
+#hist(data,xlab="diff nbLieux  (vanilla - mod)", main="Delta nombre de lieux vanilla/mod")
 
 #lien 
-fit <- aov(nbPlaces ~ MyMod, data=DTPlacesNbPlaces)
-summary(fit)
+#fit <- aov(nbPlaces ~ MyMod, data=DTPlacesNbPlaces)
+#summary(fit)
 ```
 
 ###Lien entre mode de jeu et nombre d'interaction
@@ -178,8 +233,14 @@ summary(fit)
 ###Lien entre mode de jeu et mort du joueur
 ```{r echo=FALSE}
 #ajout des variables
-DTAAIntNb <- DTAAInt[V8==9,.(nbInt=nrow(.SD)),by=.(MyMod,MyPlayerId)]
-#DTAIntNb <- DTAInt[V6==9,.(nbInt=nrow(.SD)),by=.(MyMod,MyPlayerId)]
+DTAAIntNb <- DTAAInt[action==9,.(nbInt=nrow(.SD)),by=.(MyMod,MyPlayerId)]
+
+#on met à 0 la ou il y'a des NA (si un mec est pas mort dans un mode)
+DTAAIntNb <- merge(DTAAIntNb[,CJ(MyMod=unique(MyMod),MyPlayerId=unique(MyPlayerId))],DTAAIntNb,by=c('MyPlayerId','MyMod'),all=TRUE)[,.(MyMod,MyPlayerId,nbInt=ifelse(!is.na(nbInt),nbInt,0))]
+
+
+
+#DTAIntNb <- DTAInt[action==9,.(nbInt=nrow(.SD)),by=.(MyMod,MyPlayerId)]
 DTIntNb <- DTAAIntNb
 #DTIntNb$nbInt = DTAAIntNb$nbInt + DTAIntNb$nbInt
 print(DTIntNb)
@@ -194,16 +255,16 @@ fit <- aov(nbInt ~ MyMod, data=DTIntNb)
 summary(fit)
 ```
 
-###Lien entre mode de jeu et distance au barycentre
+###Lien entre mode de jeu et distance au barycentre (valeur absolue)
 ```{r echo=FALSE}
 #calcul du barycentre
-DTAPosBarycentre <- DTAPos[,.(xBar=mean(V3),yBar=mean(V4),zBar=mean(V5)),by=.(MyMod,MyPlayerId)]
-DTADistBarycentre <- DTAPos[,.(dist=sqrt((V3-mean(V3)) * (V3-mean(V3)) + (V4-mean(V4)) * (V4-mean(V4)) + (V5-mean(V5)) * (V5-mean(V5)) )),by=.(MyMod,MyPlayerId)]
+DTAPosBarycentre <- DTAPos[,.(xBar=mean(X),yBar=mean(Y),zBar=mean(Z)),by=.(MyMod,MyPlayerId)]
+DTADistBarycentre <- DTAPos[,.(dist=sqrt((X-mean(X)) * (X-mean(X)) + (Y-mean(Y)) * (Y-mean(Y)) + (Z-mean(Z)) * (Z-mean(Z)) )),by=.(MyMod,MyPlayerId)]
 DTADistBarycentreMean <- DTADistBarycentre[,.(mdist=mean(dist),sddist=sd(dist)),by=.(MyMod,MyPlayerId)]
 print(DTADistBarycentreMean)
 
-data <- DTADistBarycentreMean[MyMod=="vanilla",mdist] - DTADistBarycentreMean[MyMod=="mod",mdist];
-hist(data,xlab="diff nbMorts  (vanilla - mod)", main="Delta dist barycentre vanilla/mod")
+data <- abs(DTADistBarycentreMean[MyMod=="vanilla",mdist] - DTADistBarycentreMean[MyMod=="mod",mdist]);
+hist(data,xlab="diff dist barycentre  abs(vanilla - mod)", main="Delta dist barycentre vanilla/mod")
 
 #lien 
 fit <- aov(mdist ~ MyMod, data=DTADistBarycentreMean)
@@ -211,20 +272,20 @@ fit <- aov(mdist ~ MyMod, data=DTADistBarycentreMean)
 summary(fit)
 ```
 
-###Lien entre mode de jeu et distance totale
+###Lien entre mode de jeu et distance totale (valeur absolue)
 ```{r echo=FALSE}
 #calcul du barycentre
-setkeyv(DTAPos,c("MyPlayerId","V2"))
-DTADistStep <- DTAPos[,.(dist=sqrt((V3-lag(V3)) * (V3-lag(V3)) + (V4-lag(V4)) * (V4-lag(V4)) + (V5-lag(V5)) * (V5-lag(V5)) )),by=.(MyMod,MyPlayerId)]
+setkeyv(DTAPos,c("MyPlayerId","time"))
+DTADistStep <- DTAPos[,.(dist=sqrt((X-lag(X)) * (X-lag(X)) + (Y-lag(Y)) * (Y-lag(Y)) + (Z-lag(Z)) * (Z-lag(Z)) )),by=.(MyMod,MyPlayerId)]
 
-DTADistStep <- DTAPos[,.(dx=(V3-c(V3[1], V3[-.N])),dy=(V4-c(V4[1], V4[-.N])),dz=(V5-c(V5[1], V5[-.N]))),by=.(MyMod,MyPlayerId)]
+DTADistStep <- DTAPos[,.(dx=(X-c(X[1], X[-.N])),dy=(Y-c(Y[1], Y[-.N])),dz=(Z-c(Z[1], Z[-.N]))),by=.(MyMod,MyPlayerId)]
 DTADistStep <- DTADistStep[,.(dist=sqrt(dx*dx+dz*dz+dy*dy)),by=.(MyMod,MyPlayerId)]
 DTADistStep <- DTADistStep[,.(distSum=sum(dist)),by=.(MyMod,MyPlayerId)]
 
 print(DTADistStep)
 
-data <- DTADistStep[MyMod=="vanilla",distSum] - DTADistStep[MyMod=="mod",distSum];
-hist(data,xlab="diff nbMorts  (vanilla - mod)", main="Delta dist barycentre vanilla/mod")
+data <- abs(DTADistStep[MyMod=="vanilla",distSum] - DTADistStep[MyMod=="mod",distSum]);
+hist(data,xlab="diff distance totale  abs(vanilla - mod)", main="Delta dist totale vanilla/mod")
 
 #lien 
 fit <- aov(distSum ~ MyMod, data=DTADistStep)
